--- a/package.json
+++ b/package.json
@@ -19,9 +19,12 @@
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
+    "extends": "react-app",
+    "overrides": [
+      {
+        "files": ["**/*.test.js"],
+        "plugins": ["jest"]
+      }
     ]
   },
   "browserslist": {
